@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2020 Real Logic Limited.
+ * Copyright 2013-2021 Real Logic Limited.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 buildscript {
     repositories {
         mavenCentral()
@@ -22,25 +23,42 @@ buildscript {
 plugins {
     id 'java-library'
     id 'idea'
-    id 'io.freefair.javadoc-links' version '4.1.6' apply false
-    id 'com.github.johnrengelman.shadow' version '5.2.0' apply false
-    id "com.github.ben-manes.versions" version "0.28.0"
+    id 'com.github.johnrengelman.shadow' version '7.0.0' apply false
+    id "com.github.ben-manes.versions" version "0.38.0"
 }
 
 defaultTasks 'clean', 'build'
 
-def checkstyleVersion = '8.28'
+static def getBuildJavaVersion() {
+    def buildJavaVersion = System.getenv('BUILD_JAVA_VERSION') ?: JavaVersion.current().getMajorVersion()
+    if (buildJavaVersion.indexOf('.') > 0) {
+        buildJavaVersion = buildJavaVersion.substring(0, buildJavaVersion.indexOf('.'))
+    }
+    if (buildJavaVersion.indexOf('-') > 0) {
+        buildJavaVersion = buildJavaVersion.substring(0, buildJavaVersion.indexOf('-'))
+    }
+    Integer.parseInt(buildJavaVersion)
+}
+int buildJavaVersion = getBuildJavaVersion()
+
+def toolchainLauncher = javaToolchains.launcherFor {
+    languageVersion = JavaLanguageVersion.of(buildJavaVersion)
+}
+
+def checkstyleVersion = '8.39'
 def hamcrestVersion = '2.2'
-def mockitoVersion = '3.3.0'
-def junitVersion = '5.6.0'
-def jmhVersion = '1.23'
-def agronaVersion = '1.4.0'
+def mockitoVersion = '3.9.0'
+def byteBuddyVersion = '1.11.0'
+def junitVersion = '5.7.1'
+def jmhVersion = '1.30'
+def agronaVersion = '1.10.0'
+def agronaVersionRange = '[1.10,1.11[' // allow any patch release of 1.10.x
 
 def sbeGroup = 'uk.co.real-logic'
 def sbeVersion = file('version.txt').text.trim()
 
 ext {
-    isReleaseVersion = !version.endsWith('-SNAPSHOT')
+    isReleaseVersion = !sbeVersion.endsWith('-SNAPSHOT')
     releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
     snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
 
@@ -57,7 +75,7 @@ def projectPom = {
     name = 'sbe'
     packaging = 'pom'
     description = 'FIX/SBE - OSI layer 6 presentation for encoding and decoding application messages' +
-        ' in binary format for low-latency applications'
+        ' in binary format for low-latency applications.'
     url = 'https://github.com/real-logic/simple-binary-encoding'
 
     scm {
@@ -124,6 +142,19 @@ allprojects {
         mavenLocal()
         mavenCentral()
     }
+
+    configurations.all {
+        resolutionStrategy {
+            failOnVersionConflict()
+
+            force "net.bytebuddy:byte-buddy:${byteBuddyVersion}",
+                    "net.bytebuddy:byte-buddy-agent:${byteBuddyVersion}"
+        }
+    }
+
+    tasks.withType(JavaExec).configureEach {
+        javaLauncher = toolchainLauncher
+    }
 }
 
 jar.enabled = false
@@ -132,10 +163,15 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'checkstyle'
     apply plugin: 'eclipse'
-    apply plugin: 'io.freefair.javadoc-links'
 
     group = sbeGroup
     version = sbeVersion
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(buildJavaVersion)
+        }
+    }
 
     checkstyle.toolVersion = "${checkstyleVersion}"
 
@@ -151,39 +187,44 @@ subprojects {
     }
 
     tasks.withType(JavaCompile) {
-        if (JavaVersion.current().isJava9Compatible()) {
-            options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
-            options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        if (buildJavaVersion >= 16) {
+            // -- Workaround for https://github.com/gradle/gradle/issues/15538
+            options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+            // --
         }
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
 
     javadoc {
+        failOnError false
         title = '<h1>Simple Binary Encoding (SBE)</h1>'
-        options.bottom = '<i>Copyright &#169; 2013-2020 Real Logic Limited. All Rights Reserved.</i>'
+        options.bottom = '<i>Copyright &#169; 2013-2021 Real Logic Limited. All Rights Reserved.</i>'
         options.encoding = 'UTF-8'
         options.docEncoding = 'UTF-8'
         options.charSet = 'UTF-8'
-        if (JavaVersion.current().isJava10Compatible()) {
+        options.links("https://www.javadoc.io/doc/org.agrona/agrona/${agronaVersion}/")
+        if (buildJavaVersion >= 17) { // early access JavaDoc location is different
+            options.links("https://download.java.net/java/early_access/jdk${buildJavaVersion}/docs/api/")
+        }
+        else if (buildJavaVersion >= 11) {
+            options.links("https://docs.oracle.com/en/java/javase/${buildJavaVersion}/docs/api/")
+        }
+        else {
+            options.links("https://docs.oracle.com/javase/${buildJavaVersion}/docs/api/")
+        }
+        if (buildJavaVersion >= 10) {
             options.addBooleanOption 'html5', true
         }
     }
 
     test {
-        if (JavaVersion.current().isJava9Compatible()) {
-            jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
-            jvmArgs('--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED')
-        }
-
         useJUnitPlatform()
 
         testLogging {
             showStandardStreams = true
             exceptionFormat = 'full'
         }
-
-        reports.html.enabled = false // Disable individual test reports
     }
 }
 
@@ -194,21 +235,28 @@ project(':sbe-tool') {
     apply plugin: 'signing'
 
     dependencies {
-        api "org.agrona:agrona:${agronaVersion}"
+        api("org.agrona:agrona") {
+            version {
+                strictly(agronaVersionRange)
+                prefer(agronaVersion)
+            }
+        }
         testImplementation files('build/classes/java/generated')
         testImplementation "org.hamcrest:hamcrest:${hamcrestVersion}"
-        testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+        testImplementation "org.mockito:mockito-core:${mockitoVersion}"
         testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     }
 
     def generatedDir = 'build/generated-src'
     sourceSets {
-        generated.java.srcDir generatedDir
+        generated {
+            java.srcDir generatedDir
+            compileClasspath += sourceSets.main.runtimeClasspath
+        }
         test {
-            compileClasspath += generated.output
-            runtimeClasspath += generated.output
+            java.srcDir generatedDir
+            compileClasspath += sourceSets.main.runtimeClasspath
         }
     }
 
@@ -216,6 +264,8 @@ project(':sbe-tool') {
         dependsOn 'generateTestCodecs'
         classpath += sourceSets.main.runtimeClasspath
     }
+
+    compileTestJava.dependsOn compileGeneratedJava
 
     task generateTestCodecs(dependsOn: 'compileJava', type: JavaExec) {
         main = 'uk.co.real_logic.sbe.SbeTool'
@@ -230,13 +280,11 @@ project(':sbe-tool') {
     }
 
     jar {
-        exclude 'golang/templates'
-
         manifest.attributes(
             'Specification-Title': 'Simple Binary Encoding',
             'Specification-Version': '1.0',
             'Implementation-Title': 'SBE',
-            'Implementation-Version': "${sbeVersion}",
+            'Implementation-Version': sbeVersion,
             'Implementation-Vendor': 'Real Logic Limited',
             'Automatic-Module-Name': 'uk.co.real_logic.sbe.tool'
         )
@@ -247,9 +295,7 @@ project(':sbe-tool') {
         from sourceSets.main.allSource
         from ('src/main/cpp/otf') {
             into 'cpp'
-
         }
-        exclude 'golang/templates'
     }
 
     java {
@@ -267,7 +313,7 @@ project(':sbe-tool') {
 
         repositories {
             maven {
-                url = !isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl
+                url(!isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl)
                 credentials {
                     username = ossrhUsername
                     password = ossrhPassword
@@ -297,7 +343,7 @@ project(':sbe-all') {
             'Specification-Title': 'Simple Binary Encoding',
             'Specification-Version': '1.0',
             'Implementation-Title': 'SBE',
-            'Implementation-Version': "${sbeVersion}",
+            'Implementation-Version': sbeVersion,
             'Implementation-Vendor': 'Real Logic Limited',
             'Automatic-Module-Name': 'uk.co.real_logic.sbe.all'
         )
@@ -311,7 +357,6 @@ project(':sbe-all') {
         from (project(':sbe-tool').file('src/main/cpp/otf')) {
             into 'cpp'
         }
-        exclude 'golang/templates'
     }
 
     javadoc {
@@ -334,7 +379,7 @@ project(':sbe-all') {
         }
         repositories {
             maven {
-                url = !isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl
+                url(!isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl)
                 credentials {
                     username = ossrhUsername
                     password = ossrhPassword
@@ -359,17 +404,14 @@ project(':sbe-samples') {
 
     def generatedDir = 'build/generated-src'
     sourceSets {
-        generated.java.srcDir generatedDir
+        generated {
+            java.srcDir generatedDir
+            compileClasspath += project(':sbe-all').sourceSets.main.runtimeClasspath
+        }
     }
 
-    compileJava {
-        dependsOn 'compileGeneratedJava'
-    }
-
-    compileGeneratedJava {
-        dependsOn 'generateCodecs'
-        classpath += project(':sbe-all').sourceSets.main.runtimeClasspath
-    }
+    compileJava.dependsOn 'compileGeneratedJava'
+    compileGeneratedJava.dependsOn 'generateCodecs'
 
     task generateCodecs(type: JavaExec) {
         main = 'uk.co.real_logic.sbe.SbeTool'
@@ -379,6 +421,7 @@ project(':sbe-samples') {
             'sbe.target.language': 'Java',
             'sbe.java.generate.interfaces': 'true',
             'sbe.validation.stop.on.error': 'true',
+            'sbe.decode.unknown.enum.values': 'true',
             'sbe.xinclude.aware': 'true',
             'sbe.validation.xsd': validationXsdPath)
         args = ['src/main/resources/example-schema.xml', 'src/main/resources/example-extension-schema.xml']
@@ -414,7 +457,7 @@ project(':sbe-samples') {
             'Specification-Title': 'Simple Binary Encoding',
             'Specification-Version': '1.0',
             'Implementation-Title': 'SBE',
-            'Implementation-Version': "${sbeVersion}",
+            'Implementation-Version': sbeVersion,
             'Implementation-Vendor': 'Real Logic Limited',
             'Automatic-Module-Name': 'uk.co.real_logic.sbe.samples'
         )
@@ -428,6 +471,7 @@ project(':sbe-samples') {
 
     javadoc {
         source += sourceSets.generated.allJava
+        source += project(':sbe-tool').sourceSets.main.allJava
     }
 
     java {
@@ -445,7 +489,7 @@ project(':sbe-samples') {
 
         repositories {
             maven {
-                url = !isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl
+                url(!isReleaseVersion ? snapshotsRepoUrl : releasesRepoUrl)
                 credentials {
                     username = ossrhUsername
                     password = ossrhPassword
@@ -470,17 +514,14 @@ project(':sbe-benchmarks') {
     }
 
     sourceSets {
-        generated.java.srcDir 'build/generated-src'
+        generated {
+            java.srcDir 'build/generated-src'
+            compileClasspath += project(':sbe-all').sourceSets.main.runtimeClasspath
+        }
     }
 
-    compileGeneratedJava {
-        dependsOn 'generateCodecs'
-        classpath += project(':sbe-all').sourceSets.main.runtimeClasspath
-    }
-
-    compileJava {
-        dependsOn 'compileGeneratedJava'
-    }
+    compileGeneratedJava.dependsOn 'generateCodecs'
+    compileJava.dependsOn 'compileGeneratedJava'
 
     task generateCodecs(type: JavaExec) {
         main = 'uk.co.real_logic.sbe.SbeTool'
@@ -502,6 +543,7 @@ project(':sbe-benchmarks') {
     }
 
     jar.finalizedBy shadowJar
+    javadoc.enabled = false
 }
 
 /*
@@ -668,10 +710,10 @@ task generateIrCodecs {
     dependsOn 'generateJavaIrCodecs', 'generateCppIrCodecs', 'generateGolangIrCodecs'
 }
 
-task runJavaBenchmarks(type: Exec) {
-    commandLine 'java',
+task runJavaBenchmarks(type: Exec, dependsOn: 'sbe-benchmarks:jar') {
+    commandLine toolchainLauncher.get().executablePath,
         '-jar', 'sbe-benchmarks/build/libs/sbe-benchmarks.jar',
-        '-jvmArgs', '-Dagrona.disable.bounds.checks=true -XX:+UseParallelOldGC',
+        '-jvmArgs', '-Dagrona.disable.bounds.checks=true -XX:+UseParallelGC',
         '-w', '1s', '-r', '1s','-wi', '3', '-i', '5', '-tu', 'ns', '-f', '5'
 }
 
@@ -682,6 +724,6 @@ task testReport(type: TestReport) {
 }
 
 wrapper {
-    gradleVersion = '6.2.2'
+    gradleVersion = '7.0.1'
     distributionType = 'ALL'
 }
